--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,7 +3,7 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #55198b;
+$buttonColor: #D2693E;
 $buttonHover: #8c43ce;
 $topButtonHover: #000;
 
@@ -28,7 +28,7 @@ $githubRepoCardColor: rgb(88, 96, 105);
 $githubRepoCardRepoCardStatsColor: rgb(106, 115, 125);
 $githubRepoCardRepoNameColor: rgb(36, 41, 46);
 $githubProfileCardLocationTS: #ffebcd;
-$githubProfileCardBorder: #6c63ff;
+$githubProfileCardBorder: #ebb098;
 
 // light background colors
 $lightBackground1: #fff;
@@ -69,7 +69,7 @@ $headerHoverBG: #f4f4f4;
 $contactDetailHoverTS: #b5b5b5;
 
 // misc backgrounds
-$progressBarSpanBG: #aaa5ff;
+$progressBarSpanBG: #f08f69;
 $iconBackground: #333;
 $appHeaderBG: #282c34;
 
