Change proficiency display

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -43,6 +43,11 @@
   height: auto;
 }
 
+.skill-years {
+  font-size: 28px;
+  font-weight: 700;
+}
+
 /* Media Query */
 
 @media (max-width: 1456px) {
